; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___add_help_panel.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___add_help_panel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32* }
%struct.TYPE_11__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"Help\00", align 1
@PANEL_CONFIG_SIDEPANEL_W = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__add_help_panel(%struct.TYPE_12__* %0) #0 {
  %2 = alloca %struct.TYPE_12__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_11__*, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %2, align 8
  %7 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %3, align 8
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  %10 = call i32 @r_cons_get_size(i32* %4)
  %11 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %12 = call i32 @__adjust_side_panels(%struct.TYPE_12__* %11)
  %13 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @__insert_panel(%struct.TYPE_12__* %13, i32 0, i8* %14, i8* %15)
  %17 = load i32*, i32** %3, align 8
  %18 = call %struct.TYPE_11__* @__get_panel(i32* %17, i32 0)
  store %struct.TYPE_11__* %18, %struct.TYPE_11__** %6, align 8
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_10__*, %struct.TYPE_10__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %21, i32 0, i32 0
  %23 = load i32, i32* @PANEL_CONFIG_SIDEPANEL_W, align 4
  %24 = load i32, i32* %4, align 4
  %25 = sub nsw i32 %24, 1
  %26 = call i32 @__set_geometry(i32* %22, i32 0, i32 1, i32 %23, i32 %25)
  %27 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %28 = call i32 @__set_curnode(%struct.TYPE_12__* %27, i32 0)
  %29 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %30 = call i32 @__set_refresh_all(%struct.TYPE_12__* %29, i32 0, i32 0)
  ret void
}

declare dso_local i32 @r_cons_get_size(i32*) #1

declare dso_local i32 @__adjust_side_panels(%struct.TYPE_12__*) #1

declare dso_local i32 @__insert_panel(%struct.TYPE_12__*, i32, i8*, i8*) #1

declare dso_local %struct.TYPE_11__* @__get_panel(i32*, i32) #1

declare dso_local i32 @__set_geometry(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @__set_curnode(%struct.TYPE_12__*, i32) #1

declare dso_local i32 @__set_refresh_all(%struct.TYPE_12__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
